[gd_scene load_steps=23 format=3 uid="uid://dg8il80lvwpit"]

[ext_resource type="Script" uid="uid://dfhrcnpf2ev8g" path="res://world.gd" id="1_rvmsc"]
[ext_resource type="Texture2D" uid="uid://butf25gugdodk" path="res://blocky_game_atlas.webp" id="2_p7lbm"]
[ext_resource type="PackedScene" uid="uid://bxuo8t178ndey" path="res://player.tscn" id="2_rjrbw"]
[ext_resource type="Script" uid="uid://dg7esmkq76vou" path="res://world_generator.gd" id="3_rjrbw"]
[ext_resource type="VoxelBlockyModelCube" uid="uid://c2krob74pbsuh" path="res://blocks/machine.tres" id="4_rjrbw"]
[ext_resource type="VoxelBlockyModelCube" uid="uid://s6f3aku07hlp" path="res://blocks/cable.tres" id="5_ypj6x"]
[ext_resource type="Script" uid="uid://cdu5tlyk72uu4" path="res://addons/gecs/world.gd" id="7_44b12"]
[ext_resource type="Script" uid="uid://ds28wm4vguxep" path="res://systems/machine_system.gd" id="8_igx0j"]
[ext_resource type="Script" uid="uid://juy3ncjbvhoa" path="res://observers/block_observer.gd" id="9_tctsc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cojph"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_p7lbm"]
sky_material = SubResource("ProceduralSkyMaterial_cojph")

[sub_resource type="Environment" id="Environment_rvmsc"]
background_mode = 2
sky = SubResource("Sky_p7lbm")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="VoxelGeneratorScript" id="VoxelGeneratorScript_rjrbw"]
script = ExtResource("3_rjrbw")

[sub_resource type="VoxelBlockyModelEmpty" id="VoxelBlockyModelEmpty_p7lbm"]

[sub_resource type="VoxelBlockyModelCube" id="VoxelBlockyModelCube_rvmsc"]
tile_left = Vector2i(0, 1)
tile_right = Vector2i(0, 1)
tile_bottom = Vector2i(1, 0)
tile_back = Vector2i(0, 1)
tile_front = Vector2i(0, 1)

[sub_resource type="VoxelBlockyModelCube" id="VoxelBlockyModelCube_p7lbm"]
tile_left = Vector2i(1, 0)
tile_right = Vector2i(1, 0)
tile_bottom = Vector2i(1, 0)
tile_top = Vector2i(1, 0)
tile_back = Vector2i(1, 0)
tile_front = Vector2i(1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rjrbw"]

[sub_resource type="VoxelBlockyFluid" id="VoxelBlockyFluid_ypj6x"]
material = SubResource("StandardMaterial3D_rjrbw")

[sub_resource type="VoxelBlockyModelFluid" id="VoxelBlockyModelFluid_44b12"]
color = Color(0.1882353, 0.41568628, 1, 0.39215687)
culls_neighbors = false
fluid = SubResource("VoxelBlockyFluid_ypj6x")

[sub_resource type="VoxelBlockyLibrary" id="VoxelBlockyLibrary_rjrbw"]
models = Array[VoxelBlockyModel]([SubResource("VoxelBlockyModelEmpty_p7lbm"), SubResource("VoxelBlockyModelCube_rvmsc"), SubResource("VoxelBlockyModelCube_p7lbm"), SubResource("VoxelBlockyModelFluid_44b12"), ExtResource("4_rjrbw"), ExtResource("5_ypj6x")])

[sub_resource type="VoxelMesherBlocky" id="VoxelMesherBlocky_ypj6x"]
library = SubResource("VoxelBlockyLibrary_rjrbw")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_44b12"]
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_p7lbm")
texture_filter = 0

[node name="Node3D" type="Node3D"]
script = ExtResource("1_rvmsc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rvmsc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("2_rjrbw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
speed = 32.0

[node name="VoxelTerrain" type="VoxelTerrain" parent="."]
generator = SubResource("VoxelGeneratorScript_rjrbw")
mesher = SubResource("VoxelMesherBlocky_ypj6x")
material_override = SubResource("StandardMaterial3D_44b12")
run_stream_in_editor = false

[node name="World" type="Node" parent="."]
script = ExtResource("7_44b12")
system_nodes_root = NodePath("Systems")
metadata/_custom_type_script = "uid://cdu5tlyk72uu4"

[node name="Systems" type="Node" parent="World"]

[node name="BlockObserver" type="Node" parent="World/Systems"]
script = ExtResource("9_tctsc")
metadata/_custom_type_script = "uid://juy3ncjbvhoa"

[node name="MachineSystem" type="Node" parent="World/Systems"]
script = ExtResource("8_igx0j")
metadata/_custom_type_script = "uid://ds28wm4vguxep"

[connection signal="block_broken" from="Player" to="." method="_on_player_block_broken"]
[connection signal="block_broken" from="Player" to="World/Systems/BlockObserver" method="_on_player_block_broken"]
[connection signal="block_placed" from="Player" to="." method="_on_player_block_placed"]
[connection signal="block_placed" from="Player" to="World/Systems/BlockObserver" method="_on_player_block_placed"]
[connection signal="block_loaded" from="VoxelTerrain" to="." method="_on_voxel_terrain_block_loaded"]
